add new features

--- a/frontend/app/src/main/res/layout/fragment_notifications.xml
+++ b/frontend/app/src/main/res/layout/fragment_notifications.xml
@@ -4,39 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F8F8F8" 
     tools:context=".ui.notifications.NotificationsFragment">
 
     <TextView
         android:id="@+id/notificationsTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="24dp"
         android:text="Notifications"
-        android:textSize="20sp"
+        android:textSize="34sp" 
         android:textStyle="bold"
+        android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notificationsRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notificationsTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/notificationsTitle"
+        tools:listitem="@layout/item_notification" />
 
     <TextView
         android:id="@+id/emptyNotificationsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No notifications"
-        android:visibility="gone"
+        android:text="No notifications yet."
+        android:textSize="16sp"
+        android:visibility="gone" 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/notificationsTitle" 
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout> 
