--- a/frontend/app/src/main/res/values-night/themes.xml
+++ b/frontend/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,13 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="Theme.AlumniApp.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.AlumniApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.AlumniApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
